--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,17 @@ traitlets==5.0.5
 virtualenv==20.4.7
 virtualenv-clone==0.5.4
 wcwidth==0.2.5
+APScheduler==3.7.0
+asgiref==3.3.4
+certifi==2020.12.5
+chardet==4.0.0
+Django==3.2.3
+gunicorn==20.1.0
+idna==2.10
+psycopg2==2.8.6
+pytz==2021.1
+requests==2.25.1
+six==1.16.0
+sqlparse==0.4.1
+tzlocal==2.1
+urllib3==1.26.4
